--- a/docs/custom-flows/email-links.mdx
+++ b/docs/custom-flows/email-links.mdx
@@ -5,7 +5,11 @@ description: Learn how to authenticate or verify users with email links.
 
 # Email links
 
-[Email links](/docs/authentication/configuration/sign-up-sign-in-options#authentication-strategy) can be used to easily authenticate users or verify their email addresses. The email link flow looks like this:
+<Callout type="danger">
+  Clerk's [Account Portal pages](/docs/account-portal/overview) and [prebuilt components](/docs/components/overview) handle the entire email link flow out of the box. This guide is for users who want to build a custom user interface using the Clerk API.
+</Callout>
+
+[Email links](/docs/authentication/configuration/sign-up-sign-in-options#email-link) can be used to easily authenticate users or verify their email addresses. The email link flow looks like this:
 
 1. The user enters their email address and asks for an email link.
 2. Clerk sends an email to the user, containing a link to the verification URL.
@@ -13,7 +17,11 @@ description: Learn how to authenticate or verify users with email links.
 4. Clerk will verify the user's identity and advance any sign-in or sign-up attempt that might be in progress. In case the verification fails, Clerk will inform the user.
 5. If the verification is successful, the user is signed in or signed up, or their email address is verified.
 
-Clerk's [prebuilt components](/docs/components/overview) handle the entire email link flow for you, but you can also use the Clerk API to create a completely custom email link flow. Clerk's API is highly flexible and allows you to hook into any of the above steps while abstracting away all the complexities of an email link-based authentication or verification flow. This guide will walk you through how to build a custom email link flow using the [`useSignUp()`](/docs/references/react/use-sign-up) and [`useSignIn()`](/docs/references/react/use-sign-up) hooks.
+Clerk's [Account Portal](/docs/account-portal/overview) and [prebuilt components](/docs/components/overview) handle the entire email link flow for you, but if you want to build a custom user interface, you can use the Clerk API to create a completely custom email link flow. This guide will walk you through how to build a custom email link flow using the [`useSignUp()`](/docs/references/react/use-sign-up) and [`useSignIn()`](/docs/references/react/use-sign-up) hooks.
+
+{/* TODO: Update these Steps when the Steps component can accept other headings. As of right now, Steps can only accept H3s. */}
+
+<Steps>
 
 ### Enable email link authentication
 
@@ -35,13 +43,13 @@ Users can now sign up and sign in with their email addresses using email links.
 
 ### Enable email link verification
 
-**Verification methods** are different from **Authentication strategies**. **Verification methods** are used for verifying a user's identifier, such as an email address upon initial sign-up or when updating their profile. **Authentication strategies** are used for authenticating a user, such as when they are signing in to your application.
+**Verification methods** are different from **Authentication strategies**. **Authentication strategies** are used for authenticating a user, such as when they are signing in to your application. **Verification methods** are used for verifying a user's identifier, such as an email address upon initial sign-up or when updating their profile.
 
 1. On this same page, next to **Email address**, click on the settings cog icon.
 2. In the modal that pops up, there is a **Verification methods** section. Check the box for the **Email verification link** option. For the sake of this guide, uncheck the box for **Email verification code**.
-3. Click **Continue** in the bottom right corner.
+3. Click **Continue** in the bottom right corner to save your changes.
 
-#### Create the email link sign-up flow
+### Create the email link sign-up flow
 
 To sign up a user using an email link, you need to:
 
@@ -432,7 +440,7 @@ cancelEmailLinkFlow();
 ```
 </CodeBlockTabs>
 
-#### Create the email link sign-in flow
+### Create the email link sign-in flow
 
 To authenticate a user using an email link, you need to:
 
@@ -826,7 +834,7 @@ cancelEmailLinkFlow();
 ```
 </CodeBlockTabs>
 
-#### Create the email link verification flow
+### Create the email link verification flow
 
 Email links can also provide a nice user experience for verifying email addresses that users add when updating their profiles. The flow is similar to one-time code verification, but users need only click on the email link; there's no need to return to your app.
 
@@ -1012,3 +1020,5 @@ if (res.verification.status === "verified") {
 cancelEmailLinkFlow();
 ```
 </CodeBlockTabs>
+
+</Steps>
