--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -5,6 +5,10 @@ description: Learn how to build a custom sign-out flow using Clerk's signOut() f
 
 # Build a custom sign-out flow
 
+<Callout type="danger">
+  Clerk's [Account Portal pages](/docs/account-portal/overview) and [prebuilt components](/docs/components/overview) handle the entire sign out flow out of the box. This guide is for users who want to build a custom user interface using the Clerk API.
+</Callout>
+
 Clerk's [`<UserButton />`](/docs/components/user/user-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) components provide a way to sign out users, out of the box. However, if you are building a custom solution, you can use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) function to sign out users.
 
 The `signOut()` function signs a user out of all sessions in a [multi-session application](/docs/custom-flows/multi-session-applications), or simply the current session in a single-session context. You can also specify a specific session to sign out by passing the `sessionId` parameter.
