--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -5,6 +5,10 @@ description: Learn how build a custom email or SMS one time code (OTP) authentic
 
 # Build a custom email or SMS OTP authentication flow
 
+<Callout type="danger">
+  Clerk's [Account Portal pages](/docs/account-portal/overview) and [prebuilt components](/docs/components/overview) handle the entire one-time password (OTP) authentication flow out of the box. This guide is for users who want to build a custom user interface using the Clerk API.
+</Callout>
+
 Clerk supports passwordless authentication, which lets users sign in and sign up without having to remember a password. Instead, users receive a one-time password (OTP), also known as a one-time code, via email or SMS, which they can use to authenticate themselves.
 
 This guide will walk you through how to build a custom email or SMS OTP sign-up and sign-in flow using the [`useSignUp()`](/docs/references/react/use-sign-up) and [`useSignIn()`](/docs/references/react/use-sign-up) React hooks.
@@ -18,7 +22,7 @@ This guide will walk you through how to build a custom email or SMS OTP sign-up 
 To use email and SMS OTP, you first need to enable these authentication strategies in the Clerk Dashboard.
 
 1. Navigate to the Clerk Dashboard.
-2. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)** in the sidebar menu. 
+2. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)** in the sidebar menu.
 3. In the **Authentication factors** section of this page, toggle on the **Email verification code** and **SMS verification code** strategies.
 
 ### Create the OTP sign-up flow
