--- a/docs/components/customization/layout.mdx
+++ b/docs/components/customization/layout.mdx
@@ -35,5 +35,5 @@ import { ClerkProvider } from '@clerk/nextjs';
 | `privacyPageUrl` | `string` | The URL to your privacy page. |
 | `showOptionalFields` | `boolean` | Whether to show optional fields on sign up. |
 | `socialButtonsPlacement` | `'bottom' \| 'top'` | The placement of your social buttons. |
-| `socialButtonsVariant` | `'blockButton' \| 'textButton' \| 'auto'` | The variant of your social buttons. |
+| `socialButtonsVariant` | `'blockButton' \| 'iconButton' \| 'auto'` | The variant of your social buttons. |
 | `termsPageUrl` | `string` | The URL to your terms page. |
