fix: jwt templates example consistency on has_verified_contact_info

--- a/docs/backend-requests/making/jwt-templates.mdx
+++ b/docs/backend-requests/making/jwt-templates.mdx
@@ -186,7 +186,7 @@ As an example, given the following template (comments added for clarity):
 
 ```json
 {
-  "has_contact_info": "{{user.has_verified_email || user.has_verified_phone}}",
+  "has_verified_contact_info": "{{user.has_verified_email || user.has_verified_phone}}",
 
   // fallback to a string value
   "full_name": "{{user.full_name || 'Awesome User'}}",
