Address final review comments

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -21,7 +21,8 @@ description: Add authentication and user management to your Next.js app with Cle
 - Set up your environment keys
 - Wrap your Next.js app in `<ClerkProvider />`
 - Limit access to authenticated users
-- Embed the `<UserButton />`
+- Specify which routes are publicly accessible
+- Enable users to manage their session with `<UserButton />`
 
 </TutorialHero>
 
@@ -51,7 +52,7 @@ pnpm add @clerk/nextjs
 ### Set your environment keys
 
 1. If you don't have a `.env.local` file in the root directory of your Next.js project, create one now.
-2. Find your secret keys. If you're signed into Clerk, the `.env.local` snippet below will contain your secret key. Otherwise:
+2. Find your secret key and publishable key. If you're signed into Clerk, the `.env.local` snippet below will contain your both. Otherwise:
     - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
     - Select your application, then select **🔑 API Keys** in the sidebar menu.
     - You can copy your keys from the **Quick Copy** section.
@@ -75,7 +76,7 @@ All Clerk hooks and components must be children of the [`<ClerkProvider>`](/docs
 Select your preferred router below to learn how to make this data available across your entire app:
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```tsx filename="/src/app/layout.tsx" {1,12-14}
+    ```tsx filename="/src/app/layout.tsx" {1,10-14}
     import { ClerkProvider } from '@clerk/nextjs'
     import './globals.css'
 
@@ -94,7 +95,7 @@ Select your preferred router below to learn how to make this data available acro
     }
     ```
 
-    ```tsx filename="_app.tsx" {2,8-10}
+    ```tsx filename="_app.tsx" {2,6-8}
       import '@/styles/globals.css'
       import { ClerkProvider } from "@clerk/nextjs";
       import type { AppProps } from "next/app";
@@ -123,7 +124,7 @@ Now that Clerk is installed and mounted in your application, you can decide whic
     ```
 3. With `authMiddleware()`, authentication will be enabled by default on all routes that your Next.js middleware runs on, blocking access to all signed out visitors. You can specify valid routes using Next.js's [`matcher`](https://nextjs.org/docs/app/building-your-application/routing/middleware#matcher). Add the following code to your `middleware.ts` to protect your entire application:
 
-    ```tsx filename="middleware.ts" {8}
+    ```tsx filename="middleware.ts" {15}
     import { authMiddleware } from "@clerk/nextjs";
 
     export default authMiddleware({
@@ -177,7 +178,7 @@ Access your app to verify that authentication is enabled:
 Use the following code to add a `<UserButton />` to your app: 
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.tsx" {1,8}
+```tsx filename="app/page.tsx" {1,6}
 import { UserButton } from "@clerk/nextjs";
 
 export default function Home() {
@@ -189,7 +190,7 @@ export default function Home() {
 }
 ```
 
-```tsx filename="pages/index.tsx" {1,9}
+```tsx filename="pages/index.tsx" {1,7}
 import { UserButton } from "@clerk/nextjs";
 
 export default function Home() {
@@ -210,7 +211,7 @@ Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) to 
 
 ### Sign out
 
-Finally, use the `<UserButton />` by selecting your avatar, and select **Sign out**. You should be redirected to the url you specified with `afterSignOutUrl`.
+Finally, use the `<UserButton />` by selecting your avatar, then selecting **Sign out**.
 
 </Steps>
 
@@ -226,10 +227,6 @@ To see an example application that demonstrates user authentication, and session
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
 
-    <Cards title="Deploy to Production" description="Learn how to deploy your Clerk app to production." link="/docs/deployments/overview" cta="Learn More" />
-
-    <Cards title="Deploy to Vercel" description="Learn how to deploy your Clerk app to production on Vercel." link="/docs/deployments/deploy-to-vercel" cta="Learn More" />
-
     <Cards title="Create custom sign-up and sign-in pages" description="Learn how add custom sign-up and sign-in pages with Clerk components." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
 
     <Cards title="Read user and session data" description="Learn how to use Clerk's hooks and helpers to access the active session and user data in your Next.js application." link="/docs/references/nextjs/read-session-data" cta="Learn More" />
@@ -239,6 +236,10 @@ To see an example application that demonstrates user authentication, and session
     <Cards title="Next.js SDK Reference" description="Learn more about additional Next.js methods." link="/docs/references/nextjs/overview" cta="Learn More" />
 
     <Cards title="Use Clerk with Next.js 12 and older" description="Learn how to use Clerk with older versions of Next.js." link="/docs/references/nextjs/usage-with-older-versions" cta="Learn More" />
+
+    <Cards title="Deploy to Production" description="Learn how to deploy your Clerk app to production." link="/docs/deployments/overview" cta="Learn More" />
+
+    <Cards title="Deploy to Vercel" description="Learn how to deploy your Clerk app to production on Vercel." link="/docs/deployments/deploy-to-vercel" cta="Learn More" />
 
   </div>
 </div>
