update descriptions for SEO

--- a/docs/references/backend/allowlist/create-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/create-allowlist-identifier.mdx
@@ -1,6 +1,6 @@
 ---
 title: createAllowlistIdentifier()
-description: Adds a new identifier to the allowlist.
+description: Use Clerk's Backend SDK to add a new identifier to the allowlist.
 ---
 
 # `createAllowlistIdentifier()`
