--- a/docs/references/backend/client/verify-client.mdx
+++ b/docs/references/backend/client/verify-client.mdx
@@ -1,6 +1,6 @@
 ---
 title: verifyClient()
-description: Retrieves a client for a given session token, if the session is active.
+description: Use Clerk's Backend SDK to retrieve a client for a given session token, if the session is active.
 ---
 
 # `verifyClient()`
