--- a/docs/references/backend/email-addresses/create-email-address.mdx
+++ b/docs/references/backend/email-addresses/create-email-address.mdx
@@ -1,6 +1,6 @@
 ---
 title: createEmailAddress()
-description: Creates an email address for the specified user.
+description: Use Clerk's Backend SDK to create an email address for the specified user.
 ---
 
 # `createEmailAddress()`
