--- a/docs/references/backend/email-addresses/get-email-address.mdx
+++ b/docs/references/backend/email-addresses/get-email-address.mdx
@@ -1,6 +1,6 @@
 ---
 title: getEmailAddress()
-description: Retrieves a single email address by its ID, if the ID is valid.
+description: Use Clerk's Backend SDK to retrieve a single email address by its ID.
 ---
 
 # `getEmailAddress()`
