--- a/docs/references/backend/invitations/get-invitation-list.mdx
+++ b/docs/references/backend/invitations/get-invitation-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: getInvitationList()
-description: Retrieves a list of all non-revoked invitations for your application, sorted by descending creation date.
+description: Use Clerk's Backend SDK to retrieve a list of all non-revoked invitations for your application.
 ---
 
 ## `getInvitationList()`
