--- a/docs/references/backend/invitations/revoke-invitation.mdx
+++ b/docs/references/backend/invitations/revoke-invitation.mdx
@@ -1,11 +1,11 @@
 ---
 title: revokeInvitation()
-description: Revokes the invitation with the provided `invitationId`. Throws an error if `invitationId` is invalid.
+description: Use Clerk's Backend SDK to revoke an invitation.
 ---
 
 ## `revokeInvitation()`
 
-Revokes the invitation with the provided `invitationId`. Throws an error if `invitationId` is invalid.
+Revokes an invitation with the provided `invitationId`. Throws an error if `invitationId` is invalid.
 
 Revoking an invitation makes the invitation email link unusable. However, it doesn't prevent the user from signing up if they follow the sign up flow.
 
