--- a/docs/references/backend/organization/create-organization-invitation.mdx
+++ b/docs/references/backend/organization/create-organization-invitation.mdx
@@ -1,6 +1,6 @@
 ---
 title: createOrganizationInvitation()
-description: Creates an invitation for new users to join an organization.
+description: Use Clerk's Backend SDK to create an invitation for new users to join an organization.
 ---
 
 # `createOrganizationInvitation()`
