--- a/docs/references/backend/organization/create-organization-membership.mdx
+++ b/docs/references/backend/organization/create-organization-membership.mdx
@@ -1,6 +1,6 @@
 ---
 title: createOrganizationMembership()
-description: Creates membership to an organization for a user directly (circumventing the need for an invitation).
+description: Use Clerk's Backend SDK to create a membership to an organization for a user directly (circumventing the need for an invitation).
 ---
 
 # `createOrganizationMembership()` 
