--- a/docs/references/backend/organization/delete-organization-membership.mdx
+++ b/docs/references/backend/organization/delete-organization-membership.mdx
@@ -1,6 +1,6 @@
 ---
 title: deleteOrganizationMembership()
-description: Removes a user from the specified organization.
+description: Use Clerk's Backend SDK to remove a user from the specified organization.
 ---
 
 # `deleteOrganizationMembership()`
