--- a/docs/references/backend/organization/get-organization-invitation.mdx
+++ b/docs/references/backend/organization/get-organization-invitation.mdx
@@ -1,6 +1,6 @@
 ---
 title: getOrganizationInvitation()
-description: Retrieves an organization invitation by its ID, if the ID is valid.
+description: Use Clerk's Backend SDK to retrieve an organization invitation.
 ---
 
 # `getOrganizationInvitation()`
