--- a/docs/references/backend/organization/get-organization-list.mdx
+++ b/docs/references/backend/organization/get-organization-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: getOrganizationList()
-description: Retrieves a list of organizations.
+description: Use Clerk's Backend SDK to retrieve a list of organizations.
 ---
 
 # `getOrganizationList()`
