--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -1,6 +1,6 @@
 ---
 title: getOrganization()
-description: Retrieves a single organization by the organization ID, if the ID is valid, or by the organization slug.
+description: Use Clerk's Backend SDK to retrieve a single organization.
 ---
 
 # `getOrganization()`
