--- a/docs/references/backend/organization/revoke-organization-invitation.mdx
+++ b/docs/references/backend/organization/revoke-organization-invitation.mdx
@@ -1,6 +1,6 @@
 ---
 title: revokeOrganizationInvitation()
-description: Revokes an organization invitation from a user for the specified organization.
+description: Use Clerk's Backend SDK to revoke an organization invitation from a user for a specified organization.
 ---
 
 # `revokeOrganizationInvitation()`
