--- a/docs/references/backend/organization/update-organization-membership-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-membership-metadata.mdx
@@ -1,6 +1,6 @@
 ---
 title: updateOrganizationMembershipMetadata()
-description: Updates the metadata associated with a user's organization membership.
+description: Use Clerk's Backend SDK to update the metadata associated with a user's organization membership.
 ---
 
 # `updateOrganizationMembershipMetadata()`
