--- a/docs/references/backend/organization/update-organization-membership.mdx
+++ b/docs/references/backend/organization/update-organization-membership.mdx
@@ -1,11 +1,11 @@
 ---
 title: updateOrganizationMembership()
-description: Updates a user's organization membership parameters.
+description: Use Clerk's Backend SDK to update a user's organization membership.
 ---
 
 # `updateOrganizationMembership()`
 
-Updates a user's organization membership parameters. Currently, only the role can be updated.
+Updates a user's organization membership. Currently, only the role can be updated.
 
 ```tsx
 function updateOrganizationMembership: (params: UpdateOrganizationMembershipParams) => Promise<OrganizationMembership>;
