--- a/docs/references/backend/organization/update-organization-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-metadata.mdx
@@ -1,6 +1,6 @@
 ---
 title: updateOrganizationMetadata()
-description: Updates the metadata associated with the specified organization ID.
+description: Use Clerk's Backend SDK to update the metadata associated with a given organization.
 ---
 
 # `updateOrganizationMetadata()`
