--- a/docs/references/backend/phone-numbers/create-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/create-phone-number.mdx
@@ -1,6 +1,6 @@
 ---
 title: createPhoneNumber()
-description: Creates a phone number for the specified user.
+description: Use Clerk's Backend SDK to create a phone number for the specified user.
 ---
 
 # `createPhoneNumber()`
