--- a/docs/references/backend/phone-numbers/delete-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/delete-phone-number.mdx
@@ -1,6 +1,6 @@
 ---
 title: deletePhoneNumber()
-description: Deletes a phone number for a given ID.
+description: Use Clerk's Backend SDK to delete a phone number.
 ---
 
 # `deletePhoneNumber()`
