--- a/docs/references/backend/phone-numbers/get-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/get-phone-number.mdx
@@ -1,6 +1,6 @@
 ---
 title: getPhoneNumber()
-description: Retrieves a single phone number by its ID, if the ID is valid.
+description: Use Clerk's Backend SDK to retrieve a single phone number by its ID.
 ---
 
 # `getPhoneNumber()`
