--- a/docs/references/backend/phone-numbers/update-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/update-phone-number.mdx
@@ -1,6 +1,6 @@
 ---
 title: updatePhoneNumber()
-description: Updates a phone number with a given ID with attribute values provided in a params object.
+description: Use Clerk's Backend SDK to update a phone number.
 ---
 
 # `updatePhoneNumber()`
