--- a/docs/references/backend/redirect-urls/create-redirect-url.mdx
+++ b/docs/references/backend/redirect-urls/create-redirect-url.mdx
@@ -1,6 +1,6 @@
 ---
 title: createRedirectUrl()
-description: Creates a redirect URL. 
+description: Use Clerk's Backend SDK to create a redirect URL. 
 ---
 
 # `createRedirectUrl()`
