--- a/docs/references/backend/redirect-urls/delete-redirect-url.mdx
+++ b/docs/references/backend/redirect-urls/delete-redirect-url.mdx
@@ -1,11 +1,11 @@
 ---
 title: deleteRedirectUrl()
-description: Deletes a redirect URL given a valid ID.
+description: Use Clerk's Backend SDK to delete a redirect URL.
 ---
 
 # `deleteRedirectUrl()`
 
-Deletes a redirect URL given a valid ID.
+Deletes a redirect URL, given a valid ID.
 
 ```tsx
 function deleteRedirectUrl: (redirectUrlId: string) => Promise<RedirectUrl>;
