--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -1,6 +1,6 @@
 ---
 title: createUser()
-description: Creates a user. Your user management settings determine how you should setup your user model.
+description: Use Clerk's Backend SDK to create a user.
 ---
 
 # `createUser()`
