--- a/docs/references/backend/user/disable-user-mfa.mdx
+++ b/docs/references/backend/user/disable-user-mfa.mdx
@@ -1,6 +1,6 @@
 ---
 title: disableUserMFA()
-description: Disable all of a user's MFA methods (e.g. OTP sent via SMS, TOTP on their authenticator app) at once.
+description: Use Clerk's Backend SDK to disable all of a user's MFA methods at once.
 ---
 
 # `disableUserMFA()`
