--- a/docs/references/backend/user/get-count.mdx
+++ b/docs/references/backend/user/get-count.mdx
@@ -1,6 +1,6 @@
 ---
 title: getCount()
-description: Retrieves the total number of users.
+description: Use Clerk's Backend SDK to retrieve the total number of users.
 ---
 
 # `getCount()`
