--- a/docs/references/backend/user/get-user-oauth-access-token.mdx
+++ b/docs/references/backend/user/get-user-oauth-access-token.mdx
@@ -1,6 +1,6 @@
 ---
 title: getUserOauthAccessToken()
-description: Retrieve the corresponding OAuth access token for a user that has previously authenticated with a particular OAuth provider. 
+description: Use Clerk's Backend SDK to retrieve the corresponding OAuth access token for a user.
 ---
 
 # `getUserOauthAccessToken()`
