--- a/docs/references/backend/user/get-user.mdx
+++ b/docs/references/backend/user/get-user.mdx
@@ -1,6 +1,6 @@
 ---
 title: getUser()
-description: Retrieves a single user by their ID, if the ID is valid.
+description: Use Clerk's Backend SDK to retrieve a single user by their ID.
 ---
 
 # `getUser()`
@@ -8,7 +8,7 @@ description: Retrieves a single user by their ID, if the ID is valid.
 Retrieves a single [`User`](/docs/references/backend/types/backend-user) by their ID, if the ID is valid. 
 
 ```tsx
-function getUser: (sessionId: string) => Promise<User>;
+function getUser: (userId: string) => Promise<User>;
 ```
 
 ## `getUser()` parameters
