--- a/docs/references/backend/user/update-user-metadata.mdx
+++ b/docs/references/backend/user/update-user-metadata.mdx
@@ -1,11 +1,11 @@
 ---
 title: updateUserMetadata()
-description: Updates the metadata associated with the specified user ID.
+description: Use Clerk's Backend SDK to update the metadata associated with the specified user.
 ---
 
 # `updateUserMetadata()`
 
-Updates the metadata associated with the specified user ID.
+Updates the metadata associated with the specified user.
 
 ```tsx
 function updateUserMetadata: (userId: string, params: UpdateUserMetadataParams) => Promise<User>;
