--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -1,6 +1,6 @@
 ---
 title: updateUser()
-description: Updates a user with a given ID with attribute values provided in a params object.
+description: Use Clerk's Backend SDK to update a user.
 ---
 
 # `updateUser()`
