--- a/docs/references/backend/user/verify-password.mdx
+++ b/docs/references/backend/user/verify-password.mdx
@@ -1,6 +1,6 @@
 ---
 title: verifyPassword()
-description: Check that the user's password matches the supplied input. Useful for custom auth flows and re-verification.
+description: Use Clerk's Backend SDK to check that the user's password matches the supplied input. Useful for custom auth flows and re-verification.
 ---
 
 # `verifyPassword()`
@@ -34,4 +34,4 @@ console.log(response);
 
 ## Backend API (BAPI) endpoint
 
-This method in the SDK is a wrapper around the BAPI endpoint `DELETE/users/{user_id}/verify_password`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/VerifyPassword) for more details.
+This method in the SDK is a wrapper around the BAPI endpoint `POST/users/{user_id}/verify_password`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/VerifyPassword) for more details.
