--- a/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
@@ -1,6 +1,6 @@
 ---
 title: deleteAllowlistIdentifier()
-description: Deletes an allowlist identifier, given a valid ID.
+description: Use Clerk's Backend SDK to delete an allowlist identifier.
 ---
 
 # `deleteAllowlistIdentifier()`
