--- a/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
+++ b/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: getAllowlistIdentifierList()
-description: Retrieves the list of allowlist identifiers.
+description: Use Clerk's Backend SDK to retrieve a list of allowlist identifiers.
 ---
 
 # `getAllowlistIdentifierList()`
