--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -1,6 +1,6 @@
 ---
 title: getClient()
-description: Retrieves a single client by its ID, if the ID is valid.
+description: Use Clerk's Backend SDK to retrieve a single client by its ID.
 ---
 
 # `getClient()`
