--- a/docs/references/backend/email-addresses/delete-email-address.mdx
+++ b/docs/references/backend/email-addresses/delete-email-address.mdx
@@ -1,6 +1,6 @@
 ---
 title: deleteEmailAddress()
-description: Deletes an email address for a given ID.
+description: Use Clerk's Backend SDK to delete an email address.
 ---
 
 # `deleteEmailAddress()`
