--- a/docs/references/backend/email-addresses/update-email-address.mdx
+++ b/docs/references/backend/email-addresses/update-email-address.mdx
@@ -1,6 +1,6 @@
 ---
 title: updateEmailAddress()
-description: Updates an email address with a given ID with attribute values provided in a params object.
+description: Use Clerk's Backend SDK to update an email address.
 ---
 
 # `updateEmailAddress()`
