--- a/docs/references/backend/invitations/create-invitation.mdx
+++ b/docs/references/backend/invitations/create-invitation.mdx
@@ -1,6 +1,6 @@
 ---
 title: createInvitation()
-description: Creates a new invitation for the given email address and sends the invitation email.
+description: Use Clerk's Backend SDK to create a new invitation for the given email address, and send the invitation email.
 ---
 
 # `createInvitation()`
