--- a/docs/references/backend/organization/delete-organization.mdx
+++ b/docs/references/backend/organization/delete-organization.mdx
@@ -1,6 +1,6 @@
 ---
 title: deleteOrganization()
-description: Deletes an organization given a valid ID. 
+description: Use Clerk's Backend SDK to delete an organization.
 ---
 
 # `deleteOrganization()`
