--- a/docs/references/backend/organization/get-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-organization-invitation-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: getOrganizationInvitationList()
-description: Retrieves a list of organization invitations that have not yet been accepted.
+description: Use Clerk's Backend SDK to retrieve a list of organization invitations that have not yet been accepted.
 ---
 
 # `getOrganizationInvitationList()`
