--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: getOrganizationMembershipList()
-description: Retrieves a list of memberships for an organization.
+description: Use Clerk's Backend SDK to retrieve a list of memberships for an organization.
 ---
 
 # `getOrganizationMembershipList()`
