--- a/docs/references/backend/organization/update-organization.mdx
+++ b/docs/references/backend/organization/update-organization.mdx
@@ -1,6 +1,6 @@
 ---
 title: updateOrganization()
-description: Updates the organization name.
+description: Use Clerk's Backend SDK to update an organization's name.
 ---
 
 # `updateOrganization()`
