--- a/docs/references/backend/redirect-urls/get-redirect-url-list.mdx
+++ b/docs/references/backend/redirect-urls/get-redirect-url-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: getRedirectUrlList()
-description: The getRedirectUrlList() method retrieves a list of white-listed redirect URLs.
+description: Use Clerk's Backend SDK to retrieve a list of white-listed redirect URLs.
 ---
 
 # `getRedirectUrlList()`
