--- a/docs/references/backend/redirect-urls/get-redirect-url.mdx
+++ b/docs/references/backend/redirect-urls/get-redirect-url.mdx
@@ -1,6 +1,6 @@
 ---
 title: getRedirectUrl()
-description: Retrieves a single redirect URL by its ID, if the ID is valid.
+description: Use Clerk's Backend SDK to retrieve a single redirect URL by its ID.
 ---
 
 # `getRedirectUrl()`
