--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -1,6 +1,6 @@
 ---
 title: deleteUser()
-description: Deletes a user given a valid ID.
+description: Use Clerk's Backend SDK to delete a user.
 ---
 
 # `deleteUser()`
