--- a/docs/references/backend/user/get-organization-membership-list.mdx
+++ b/docs/references/backend/user/get-organization-membership-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: getOrganizationMembershipList()
-description: Retrieves a list of organization memberships for a given user.
+description: Use Clerk's Backend SDK to retrieve a list of organization memberships for a given user.
 ---
 
 # `getOrganizationMembershipList()`
