--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: getUserList()
-description: The getUserList() method retrieves a list of users.
+description: Use Clerk's Backend SDK to retrieve a list of users.
 ---
 
 # `getUserList()`
