add ban, unban, lock, and unlock user operations

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -59,6 +59,10 @@ User operations are exposed under `clerkClient.users`. The following methods are
 
 - [`createUser()`](/docs/references/backend/user/create-user)
 - [`verifyPassword()`](/docs/references/backend/user/verify-password)
+- [`banUser()`](/docs/references/backend/user/ban-user)
+- [`unbanUser()`](/docs/references/backend/user/unban-user)
+- [`lockUser()`](/docs/references/backend/user/lock-user)
+- [`unlockUser()`](/docs/references/backend/user/unlock-user)
 
 ### User `update` operations
 
