update shape of returned User object

--- a/docs/references/backend/user/update-user-metadata.mdx
+++ b/docs/references/backend/user/update-user-metadata.mdx
@@ -23,7 +23,7 @@ function updateUserMetadata: (userId: string, params: UpdateUserMetadataParams) 
 
 In this example, you can see that the returned [`User`](/docs/references/backend/types/backend-user) object has its `publicMetadata` property updated with the new metadata provided. 
 
-```tsx {3-6, 30}
+```tsx {4-6, 30}
 const userId = 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu';
 
 const response = await clerkClient.users.updateUserMetadata(userId, {
@@ -35,61 +35,39 @@ const response = await clerkClient.users.updateUserMetadata(userId, {
 console.log(response);
 /*
 _User {
-  id: 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu',
+  id: 'user_2cSSCzV7948rhPJMsY601tXsEU4',
   passwordEnabled: true,
   totpEnabled: false,
   backupCodeEnabled: false,
   twoFactorEnabled: false,
   banned: false,
-  createdAt: 1707161521327,
-  updatedAt: 1707231575639,
-  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yYnhmQ0pqZ3Yzb21rMzNHU3lZTzJhWEFvc1AifQ',
-  hasImage: true,
-  primaryEmailAddressId: 'idn_2bxp56VCiqMn4ClF3oMXBaF9iec',
+  createdAt: 1708103362688,
+  updatedAt: 1708103702285,
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJjU1NDelY3OTQ4cmhQSk1zWTYwMXRYc0VVNCIsImluaXRpYWxzIjoiVFUifQ',
+  hasImage: false,
+  primaryEmailAddressId: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
   primaryPhoneNumberId: null,
   primaryWeb3WalletId: null,
-  lastSignInAt: 1707171558384,
+  lastSignInAt: null,
   externalId: null,
   username: null,
-  firstName: 'test',
-  lastName: 'account',
+  firstName: 'Test',
+  lastName: 'User',
   publicMetadata: { example: 'metadata' },
   privateMetadata: {},
   unsafeMetadata: {},
   emailAddresses: [
     _EmailAddress {
-      id: 'idn_2bxp56VCiqMn4ClF3oMXBaF9iec',
-      emailAddress: 'alexmerona@gmail.com',
-      verification: null,
-      linkedTo: []
-    },
-    _EmailAddress {
-      id: 'idn_2bxfCHS6qr4dqtiL8BzjidDVwkR',
+      id: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
       emailAddress: 'testclerk123@gmail.com',
       verification: [_Verification],
-      linkedTo: [Array]
+      linkedTo: []
     }
   ],
   phoneNumbers: [],
   web3Wallets: [],
-  externalAccounts: [
-    _ExternalAccount {
-      id: 'idn_2bxfCN3UaowKZYKJJKcefzOLq0E',
-      provider: undefined,
-      identificationId: undefined,
-      externalId: undefined,
-      approvedScopes: 'email https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile openid profile',
-      emailAddress: 'testclerk123@gmail.com',
-      firstName: undefined,
-      lastName: undefined,
-      imageUrl: undefined,
-      username: null,
-      publicMetadata: {},
-      label: null,
-      verification: [_Verification]
-    }
-  ],
-  lastActiveAt: 1707091200000,
+  externalAccounts: [],
+  lastActiveAt: null,
   createOrganizationEnabled: true
 }
 */
