--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -30,31 +30,32 @@ function createUser: (params: CreateUserParams) => Promise<User>;
 
 ## `createUser()` example
 
-In this example, you can see that the returned response is the created `User` object, with `firstName` as `"Test"`, `lastName` as `"User"`, and `emailAddress` as an array of email addresses, which would include `'testclerk123@gmail.com'`.
+In this example, the application's instance settings have been configured to use email and password as the primary authentication method. 
 
-```tsx
+You can see that the returned response is the created `User` object, with `firstName` as `"Test"`, `lastName` as `"User"`, and `emailAddress` as an array of email addresses, which includes `'testclerk123@gmail.com'`.
+
+```tsx {27, 28, 32-39}
 const response = await clerkClient.users.createUser({
   firstName: "Test",
   lastName: "User",
   emailAddress: [ "testclerk123@gmail.com" ],
+  password: "password"
 })
 
 console.log(response);
 /*
 _User {
-  id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
-  passwordEnabled: false,
+  id: 'user_2cSSCzV7948rhPJMsY601tXsEU4',
+  passwordEnabled: true,
   totpEnabled: false,
   backupCodeEnabled: false,
   twoFactorEnabled: false,
   banned: false,
-  createdAt: 1705604079724,
-  updatedAt: 1705604079746,
-  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJiOGtRbGVTUk5tY09TQ2RKMVk4cFNScjRtSyIsImluaXRpYWxzIjoiVFUifQ',
+  createdAt: 1708103362688,
+  updatedAt: 1708103362701,
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJjU1NDelY3OTQ4cmhQSk1zWTYwMXRYc0VVNCIsImluaXRpYWxzIjoiVFUifQ',
   hasImage: false,
-  gender: undefined,
-  birthday: undefined,
-  primaryEmailAddressId: 'idn_2b8kQl4UaaUIbJKXp7q8KSLskkO',
+  primaryEmailAddressId: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
   primaryPhoneNumberId: null,
   primaryWeb3WalletId: null,
   lastSignInAt: null,
@@ -65,7 +66,14 @@ _User {
   publicMetadata: {},
   privateMetadata: {},
   unsafeMetadata: {},
-  emailAddresses: [ [_EmailAddress] ],
+  emailAddresses: [
+    _EmailAddress {
+      id: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
+      emailAddress: 'testclerk123@gmail.com',
+      verification: [_Verification],
+      linkedTo: []
+    }
+  ],
   phoneNumbers: [],
   web3Wallets: [],
   externalAccounts: [],
