--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -42,26 +42,24 @@ console.log(response);
 {
   data: [
     _User {
-      id: 'user_2b8SSmqrlUyWm9FDUGJSiAyNN5u',
+      id: 'user_2cAkrFJNEmOVuKQqLbKbj2glKcu',
       passwordEnabled: false,
       totpEnabled: false,
       backupCodeEnabled: false,
       twoFactorEnabled: false,
       banned: false,
-      createdAt: 1705595214166,
-      updatedAt: 1705595214248,
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yYjhTU2sxcGE2YVlOclA1V1RCZjRXeHBrYTgifQ',
+      createdAt: 1707561967007,
+      updatedAt: 1707561967095,
+      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yY0Frckh3dWtza1NmYXhIajRLakNEbndJS2EifQ',
       hasImage: true,
-      gender: undefined,
-      birthday: undefined,
-      primaryEmailAddressId: 'idn_2b8SSYlHRtaS4IZnFEC9TChT5PU',
+      primaryEmailAddressId: 'idn_2cAkqw5hh4hN9AFYllNKSkJZZxu',
       primaryPhoneNumberId: null,
       primaryWeb3WalletId: null,
-      lastSignInAt: 1705595214177,
+      lastSignInAt: 1707561967014,
       externalId: null,
       username: null,
-      firstName: 'Michael Dean',
-      lastName: 'Pierce',
+      firstName: 'Vyacheslav',
+      lastName: 'Ogai',
       publicMetadata: {},
       privateMetadata: {},
       unsafeMetadata: {},
@@ -69,12 +67,41 @@ console.log(response);
       phoneNumbers: [],
       web3Wallets: [],
       externalAccounts: [Array],
-      lastActiveAt: 1705536000000,
+      lastActiveAt: 1707523200000,
+      createOrganizationEnabled: true
+    },
+    _User {
+      id: 'user_2cA1W52mI9k31aomHIZm5udQD6t',
+      passwordEnabled: false,
+      totpEnabled: false,
+      backupCodeEnabled: false,
+      twoFactorEnabled: false,
+      banned: false,
+      createdAt: 1707539597250,
+      updatedAt: 1707539597331,
+      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yY0ExVzRIM0o0Uk9EaGx6ZTcyTkhSRHc0TEwifQ',
+      hasImage: true,
+      primaryEmailAddressId: 'idn_2cA1W2G13Ke5SxfXeftcdZUbd1F',
+      primaryPhoneNumberId: null,
+      primaryWeb3WalletId: null,
+      lastSignInAt: 1707539597260,
+      externalId: null,
+      username: null,
+      firstName: 'Noah',
+      lastName: 'Moscovici',
+      publicMetadata: {},
+      privateMetadata: {},
+      unsafeMetadata: {},
+      emailAddresses: [Array],
+      phoneNumbers: [],
+      web3Wallets: [],
+      externalAccounts: [Array],
+      lastActiveAt: 1707523200000,
       createOrganizationEnabled: true
     },
     ...
   ],
-  totalCount: 10
+  totalCount: 500
 }
 */
 ```
