--- a/docs/references/backend/user/get-user.mdx
+++ b/docs/references/backend/user/get-user.mdx
@@ -27,34 +27,39 @@ const response = await clerkClient.users.getUser(userId);
 console.log(response);
 /*
 _User {
-  id: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
-  passwordEnabled: false,
+  id: 'user_2cSSCzV7948rhPJMsY601tXsEU4',
+  passwordEnabled: true,
   totpEnabled: false,
   backupCodeEnabled: false,
   twoFactorEnabled: false,
   banned: false,
-  createdAt: 1694181111181,
-  updatedAt: 1705601721321,
-  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yVjdKSkhvdXlnbDNLRXRaUjlRRlFNbnVDU2cuanBlZyJ9',
-  hasImage: true,
-  gender: undefined,
-  birthday: undefined,
-  primaryEmailAddressId: 'idn_2V7JJ2R3O7KWHjCmUuEOJESHlPz',
+  createdAt: 1708103362688,
+  updatedAt: 1708103362701,
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJjU1NDelY3OTQ4cmhQSk1zWTYwMXRYc0VVNCIsImluaXRpYWxzIjoiVFUifQ',
+  hasImage: false,
+  primaryEmailAddressId: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
   primaryPhoneNumberId: null,
   primaryWeb3WalletId: null,
-  lastSignInAt: 1705601721214,
+  lastSignInAt: null,
   externalId: null,
   username: null,
-  firstName: 'Alexis',
-  lastName: 'Aguilar',
+  firstName: 'Test',
+  lastName: 'User',
   publicMetadata: {},
   privateMetadata: {},
   unsafeMetadata: {},
-  emailAddresses: [ [_EmailAddress] ],
+  emailAddresses: [
+    _EmailAddress {
+      id: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
+      emailAddress: 'testclerk123@gmail.com',
+      verification: [_Verification],
+      linkedTo: []
+    }
+  ],
   phoneNumbers: [],
   web3Wallets: [],
-  externalAccounts: [ [_ExternalAccount] ],
-  lastActiveAt: 1705536000000,
+  externalAccounts: [],
+  lastActiveAt: null,
   createOrganizationEnabled: true
 }
 */
