--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -34,7 +34,7 @@ function updateUser: (userId: string, params: UpdateUserParams) => Promise<User>
 
 In this example, you can see that the response is the updated `User` object, with a `firstName` and `lastName` of `"John"` and `"Wick"` respectively.
 
-```tsx {3, 28-29}
+```tsx {3, 26-27}
 const userId = 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK';
 
 const params = { firstName: 'John', lastName: 'Wick' }; 
@@ -44,19 +44,17 @@ const response = await clerkClient.users.updateUser(userId, params);
 console.log(response);
 /*
 _User {
-  id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
-  passwordEnabled: false,
+  id: 'user_2cSSCzV7948rhPJMsY601tXsEU4',
+  passwordEnabled: true,
   totpEnabled: false,
   backupCodeEnabled: false,
   twoFactorEnabled: false,
   banned: false,
-  createdAt: 1705604079724,
-  updatedAt: 1705604359924,
-  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJiOGtRbGVTUk5tY09TQ2RKMVk4cFNScjRtSyIsImluaXRpYWxzIjoiSlcifQ',
+  createdAt: 1708103362688,
+  updatedAt: 1708103807221,
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJjU1NDelY3OTQ4cmhQSk1zWTYwMXRYc0VVNCIsImluaXRpYWxzIjoiSlcifQ',
   hasImage: false,
-  gender: undefined,
-  birthday: undefined,
-  primaryEmailAddressId: 'idn_2b8kQl4UaaUIbJKXp7q8KSLskkO',
+  primaryEmailAddressId: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
   primaryPhoneNumberId: null,
   primaryWeb3WalletId: null,
   lastSignInAt: null,
@@ -64,10 +62,17 @@ _User {
   username: null,
   firstName: 'John',
   lastName: 'Wick',
-  publicMetadata: {},
+  publicMetadata: { example: 'metadata' },
   privateMetadata: {},
   unsafeMetadata: {},
-  emailAddresses: [ [_EmailAddress] ],
+  emailAddresses: [
+    _EmailAddress {
+      id: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
+      emailAddress: 'testclerk123@gmail.com',
+      verification: [_Verification],
+      linkedTo: []
+    }
+  ],
   phoneNumbers: [],
   web3Wallets: [],
   externalAccounts: [],
