--- a/docs/custom-flows/custom-organization-switcher.mdx
+++ b/docs/custom-flows/custom-organization-switcher.mdx
@@ -5,7 +5,19 @@ description: Learn how to build a custom organization switcher using the useOrga
 
 # Create a custom organization switcher
 
-If you need more control than what Clerk's prebuilt [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component provides, you can build your own organization switcher using the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook.
+<Callout type="danger">
+  This guide is for users who want to build a *custom* user interface using the Clerk API. To allow users to switch organizations with a *prebuilt* UI, you should use Clerk's [Account Portal pages](/docs/account-portal/overview) or [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component.
+</Callout>
+
+Users can be members of multiple organizations in Clerk. This guide will show you how to build a custom organization switcher using the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook. This hook is used to fetch a list of organizations that the user is a member of, and it provides methods to load more organizations if they are available.
+
+In the following example,
+- The `useOrganizationList()` hook is used to fetch `userMemberships`, which contains a `data` array of the user's organizations.
+- The `data` array is mapped to render a list of organizations.
+- A button is rendered for each organization, and when clicked, the `setActive()` method is called to switch the active organization.
+- A button is rendered to load more organizations, as the `data` array is paginated and will only return the first 10 results. When the button is clicked, the `fetchNext()` method is called to load more organizations, if they are available.
+
+{/* TODO (Roy): Add JS examples (use Tabs for Nextjs vs JS). Use CodeBlockTabs and add examples for  NPM Module vs window.Clerk (Script) - see the /docs/components/user-button update I did in this PR */}
 
 In the following example, the `useOrganizationList()` hook is used to fetch `userMemberships`, which contains a `data` array of the user's organizations. The `data` array is paginated and will only return the first 10 results, so the `fetchNext()` method is used to load more organizations if they are available. For more information about the properties and methods available on the `userMemberships` object, visit the [`useOrganizationList()` reference page](https://clerk.com/docs/references/react/use-organization-list#paginated-resources).
 
