--- a/docs/custom-flows/email-links.mdx
+++ b/docs/custom-flows/email-links.mdx
@@ -6,7 +6,7 @@ description: Learn how to authenticate or verify users with email links.
 # Email links
 
 <Callout type="danger">
-  Clerk's [Account Portal pages](/docs/account-portal/overview) and [prebuilt components](/docs/components/overview) handle the entire email link flow out of the box. This guide is for users who want to build a custom user interface using the Clerk API.
+  This guide is for users who want to build a *custom* user interface using the Clerk API. To authenticate or verify users with email links using a *prebuilt* UI, you should use Clerk's [Account Portal pages](/docs/account-portal/overview) or [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component.
 </Callout>
 
 [Email links](/docs/authentication/configuration/sign-up-sign-in-options#email-link) can be used to easily authenticate users or verify their email addresses. The email link flow looks like this:
