--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -6,7 +6,7 @@ description: Learn how build a custom email or SMS one time code (OTP) authentic
 # Build a custom email or SMS OTP authentication flow
 
 <Callout type="danger">
-  Clerk's [Account Portal pages](/docs/account-portal/overview) and [prebuilt components](/docs/components/overview) handle the entire one-time password (OTP) authentication flow out of the box. This guide is for users who want to build a custom user interface using the Clerk API.
+  This guide is for users who want to build a *custom* user interface using the Clerk API. To authenticate users with one-time passwords using a *prebuilt* UI, you should use Clerk's [Account Portal pages](/docs/account-portal/overview) or [prebuilt components](/docs/components/overview)
 </Callout>
 
 Clerk supports passwordless authentication, which lets users sign in and sign up without having to remember a password. Instead, users receive a one-time password (OTP), also known as a one-time code, via email or SMS, which they can use to authenticate themselves.
